--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -18,6 +19,19 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@taiga-ui/addon-commerce": "^3.8.0",
+    "@taiga-ui/addon-editor": "^3.8.0",
+    "@taiga-ui/addon-mobile": "^3.8.0",
+    "@taiga-ui/addon-preview": "^3.8.0",
+    "@taiga-ui/addon-table": "^3.8.0",
+    "@taiga-ui/addon-tablebars": "^3.8.0",
+    "@taiga-ui/cdk": "^3.8.0",
+    "@taiga-ui/core": "^3.8.0",
+    "@taiga-ui/icons": "^3.8.0",
+    "@taiga-ui/kit": "^3.8.0",
+    "@taiga-ui/styles": "^3.8.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,6 +40,7 @@
     "@angular-devkit/build-angular": "^14.0.6",
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
