--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/app/images",
               {
                 "glob": "**/*",
                 "input": "node_modules/@taiga-ui/icons/src",
